--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-        <title>smartap-frontend</title>
+        <title>VueJS</title>
     </head>
     <body>
         <noscript>
             <strong
-                >We're sorry but smartap-frontend doesn't work properly without JavaScript enabled. Please enable it to
+                >We're sorry but VueJS doesn't work properly without JavaScript enabled. Please enable it to
                 continue.</strong
             >
         </noscript>
